--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,51 @@
 /* 색상 정의 */
 :root {
+  --background-color-main-page: rgba(144, 238, 144, 0.66);
   --background-color-footer-icon : violet;
-  --background-color-footer-icon-container : skyblue;
   --background-color-list-box : lightgreen;
   --background-color-text-btn : gray;
   --background-color-caution-box : ivory;
-  --background-color-footer-text: pink;
+  --background-color-footer-text: rgb(84, 44, 24);
   --background-color-login-popup-background: rgb(232, 232, 232);
+  --background-color-popup-background: rgba(0, 0, 0, 0.5);
+  --background-color-main-card: rgba(36, 168, 36, 0.516);
+  --background-color-tree-brown: rgb(84, 44, 24);
   --color-text-btn : white;
   --color-caution-text : rgb(143, 143, 143);
+  --color-btn: #20ad45;
 }
 
-body {
+body * {
   font-family: "Jua", sans-serif;
+}
+
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.main-page {
+  background-color: var(--background-color-main-page);
+  background-image: url(./img/background.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.main-page-text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+}
+
+.main-page-text {
+  font-size: 80px;
+  color: white;
+  margin: 0;
 }
 
 /* text-btn 시작 */
@@ -36,12 +69,12 @@ body {
 .main-card {
   width: 310px; 
   height: 530px;
-  background-color: var(--background-color-footer-icon);
   border-radius: 30px;
   position: relative;
   display: inline-block;
-  margin: 0;
+  margin: 0 10px;
 }
+
 
 .main-card img {
   width: 310px;
@@ -60,89 +93,143 @@ body {
   position: relative;
   width: 310px;
   height: 530px;
-  background-color: var(--background-color-main-card);
+  background-color: white;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  left: 101.7%;
-  top: -100.7%;
+  left: 108.3%;
+  top: -101%;
   transform: scale(0);
   transition: all .2s ease;
   z-index: 999;
 }
 
-.main-card .main-card-info-box >  {
-  height: 50%;
-}
-
-.main-card-info {
-  display: inline-block;
-  width: 100%;
-}
-
-.main-card-info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .main-card-info-head {
-  height: 80px;
+  margin-top: 10px;
+  height: 100px;
+  font-size: 40px;
+  line-height: 40px;
 }
 
 .main-card-info-body {
-  height: 350px;
+  height: 330px;
+  text-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.main-card-info-body * {
+  width: 310px;
 }
 
 .main-card-info-footer {
+  font-size: 25px;
   height: 100px;
 }
 
 .card-text-btn {
+  text-align: center;
+  width: 310px;
+  height: 100%;
   padding: 0;
   margin: 0;
-  background-color: var(--background-color-footer-icon);
+  background-color: var(--background-color-main-card);
 }
 /* main-card 끝 */
 
-/* maincard-container 시작 */
+/* main-card-container 시작 */
 .body-main-page-card {
   display: inline-block;
-  background-color: var(--background-color-footer-icon-container);
   height: 550px;
-  width: 80vw;
+  width: 100%;
   margin: 10px 0;
   overflow-y: hidden;
   white-space: nowrap;
 }
 
+.main-card-container {
+  margin: 20px 0;
+}
+
+.main-card-container::-webkit-scrollbar {
+  height: 15px;
+}
+
+.main-card-container::-webkit-scrollbar-thumb {
+  background-color: hsla(216, 100%, 81%, 0.29);
+  border-radius: 7.5px;
+}
+
 .card-container {
+  height: 530px;
   display: inline-block;
-  padding: 0 30.4vw;
+  padding: 0 40%;
 }
 /* maincard-container 끝 */
 
 /* category-card-container 시작 */
-.category-box {
+.category-box-container {
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.category-box {
+  display: inline-block;
+  overflow-inline: hidden;
+  width: auto;
   padding: 0;
+  margin-left: 6%;
 }
 
 .category-box-item {
+  display: inline-block;
   background-color: var(--background-color-list-box);
   list-style-type: none;
+  margin-bottom: 5px;
   width: 310px;
   height: 530px;
   border: 1px solid black;
 }
 
+.category-item-box{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-box-item:hover{
+  border:2px green solid;
+}
+
+.category-box-item > img{
+  object-fit: fill;
+  height: 490px;
+}
+
+.category-box-text{
+  display: flex;
+  height: 40px;
+  background-color: beige;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .category-box-item-sort {
+  border: 1px solid black;
+  border-radius: 20px;
   display: inline-block;
   width: 100%;
   height: 60px;
   text-align: end;
+}
+
+.category-box-item-sort > a {
+  color: green;
 }
 /* category-card-container 끝 */
 
@@ -178,7 +265,7 @@ body {
 }
 /* caution-box 끝 */
 
-/* footer-text-btn 시작 */
+/* footer-text-botton 시작 */
 .footer-text-btn-group {
   display: flex;
   justify-content: space-around;
@@ -187,7 +274,7 @@ body {
 .footer-text-btn {
   height: 20px;
   width: 70px;
-  background-color: var(--background-color-footer-text);
+  background-color: var(--color-btn);
   border-radius: 20px;
   position: relative;
   display: inline-block;
@@ -204,22 +291,35 @@ body {
 
 .footer-text-btn .footer-text-btn-box {
   position: relative;
-  width: 200px;
+  width: 300%;
   background-color: var(--background-color-footer-text);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  top: 15%;
-  right: 15%;
   transform: scale(0);
   transition: all .2s ease;
   z-index: 999;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .footer-text-btn-info {
   display: inline-block;
   width: 100%;
+}
+
+.footer-text-btn-CS {
+  bottom: 103.5px;
+  right: 15%;
+}
+
+.footer-text-btn-SNS {
+  bottom: 72.5px;
+  right: 15%;
+}
+
+.footer-text-btn-AboutUs {
+  bottom: 59.5px;
+  right: 15%;
 }
 
 .footer-text-btn-info > a {
@@ -237,7 +337,7 @@ body {
 .footer-text-btn-SNS li {
   list-style-type: none;
   display: inline-block;
-  margin: 0 10px;
+  margin: 0 auto;
   height: 100%;
 }
 
@@ -245,27 +345,66 @@ body {
 width: 40px;
 height: 40px;
 }
-/* footer-text-btn 끝 */
+/* footer-text-botton 끝 */
 
 /* login-popup 시작 */
-.login-popup-background {
-  background-color: var(--background-color-login-popup-background);
-  width: calc(100% - 16px);
-  height: calc(100% - 16px);
-  opacity: 0.4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.popup-background {
+  background-color: var(--background-color-tree-brown);
+  position: fixed;
+	top: 0;
+	left: 0;
+  width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.3s ease;
+  z-index: 999;
 }
 
-.login-popup {
-  background-color: var(--background-color-footer-text);
-  width: 25vw;
-  height: 60vh;
+.search-popup-background {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: flex-start;
+	background-color: var(--background-color-popup-background);
+	top: 20%;
+	left: 25%;
+  width: 50%;
+	height: 50%;
+  border-radius: 20px;  
+}
+
+.popup {
+    background-color: var(--background-color-tree-brown);
+    border-radius: 1vw;
+    width: 25vw;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: visibility 0s, opacity 0.3s ease;
+}
+
+.popup-close-btn .btn {
+  padding: 0;
+}
+
+.search-popup {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 2%;
+  width: 70%;
+  height: 20%;
+  background-color: var(--background-color-popup-background);
+}
+
+.search-popup .btn {
+  padding: 0;
+  color: white;
 }
 
 .ID-box, .PW-box {
@@ -275,7 +414,7 @@ height: 40px;
   align-items: center;
 }
 
-.login-popup p {
+.login-popup p, .signin-popup p {
   display: flex;
   justify-content: center;
   margin: 0;
@@ -300,40 +439,46 @@ height: 40px;
 }
 
 .find-box {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   font-size: 15px;
-  margin-top: 20px;
 }
 
-.find-btn {
-  font-size: 15px;
+.find-btn-box {
+  display: flex;
+  align-items: center;
 }
 
 .auto-login-btn-box, .signin-btn-box {
+  font-size: small;
+  position: relative;
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin: 10px 0;
 }
 
 .auto-login-toggle-btn {
+  position: relative;
+  right: 40%;
   text-align: center;
   display: inline-block;
-  width: 70px;
-  height: 30px;
+  width: 10%;
+  height: 5%;
+  margin: 0;
 }
 
-.signin-btn-box {
-  font-size: small;
+.auto-login-btn-box .toggleSwitch {
+  margin: 0;
 }
 /* login-popup 끝 */
-/*button 시작*/
 
+/*button 시작*/
 /*전체 버튼에 적용되는 설정*/
 .btn{
   position:relative;
@@ -341,63 +486,64 @@ height: 40px;
   display: inline-block;
   padding: 15px 30px;
   border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
   text-decoration: none;
   font-weight: 600;
   transition:0.25s;
+  text-align: center;
+  color: var(--color-btn);
 }
-.btn:active{
-  transform:scale(1.3);
-}
-.btn:hover{
-  letter-spacing: 2px;
-  transform: scale(1.1);
-  cursor: pointer;
-}
-/*button 시작*/
 
-/*전체 버튼에 적용되는 설정*/
-.btn{
-  position:relative;
-  border:none;
-  display: inline-block;
-  padding: 15px 30px;
-  border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
+.find-btn .btn, .signin-btn-box .btn {
+  padding: 5px 10px;
+  margin: 1% 0;
   text-decoration: none;
-  font-weight: 600;
-  transition:0.25s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .btn:active{
   transform:scale(1.3);
 }
+
 .btn:hover{
   letter-spacing: 2px;
   transform: scale(1.1);
   cursor: pointer;
 }
+
+.signin-btn-box > .btn, .signin-popup .btn{
+  background-color: var(--background-color-tree-brown);
+}
+
 /* login, logout, 회원가입 버튼에 적용되는 설정 */
 .auth-btn{
-  background-color: #443fc1;
+  background-color: var(--color-btn);
   color: #000000;
 }
+
 .auth-btn:hover {
-  background-color: #6aafe6;
-  color: #d4dfe6;
+  background-color: var(--color-btn);
+  color: var(--background-color-tree-brown);
 }
+
 .search-btn{
-  width:80px;
+  align-items: center;
+  height: 100%;
 }
+
 .search-btn > img{
-  display: block;
-  width: 100%;
-  height:auto;
+  display: inline-block;
+  height: 100%;
+  align-items: center;
 }
+
 .toggleSwitch {
-  width: 100px;
-  height: 50px;
+  width: 80px;
+  height: 30px;
   display: block;
   position: relative;
+  right: inherit;
   border-radius: 30px;
   align-items: center;
   background-color: #fff;
@@ -407,8 +553,8 @@ height: 40px;
 }
 
 .toggleSwitch .toggleButton {
-  width: 40%;
-  height: 90%;
+  width: 30%;
+  height: 80%;
   position: absolute;
   top: 50%;
   left: 4px;
@@ -422,7 +568,7 @@ height: 40px;
 }
 
 #toggle:checked ~ .toggleSwitch .toggleButton {
-  left: calc(100% - 32px);
+  left: calc(100% - 30px);
   background: #fff;
 }
 
@@ -431,8 +577,14 @@ height: 40px;
 }
 
 .nav-btn{
-  background: #0821db;
+  background: #08db40;
   color:#fff;
+  font-size: 16px;
+}
+
+.search-popup > .btn {
+  position: absolute;
+  right: 2%;
 }
 /*button 종료*/
 
@@ -451,72 +603,85 @@ height: 40px;
 
 .search-box{
   position: relative;
-  width:25%;
+  width:100%;
+  height: 100%;
 }
 
-.search-box > input{
+#search-input{
+  height: 100%;
   box-sizing: border-box;
-  min-width: 50px;
   width:100%;
   min-width:30px;
   border:1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   text-align: center;
-  font-size: 10px;  
+  font-size: 160%;  
 }
 
-.search-box > img{
+.search-box img{
   right:12px;
   position: absolute;
-  width : 6px;
+  height: 80%;
   top:9px;
   margin : 0;
 }
 /*input-box 종료*/
 
-.navbar{
+.nav-bar{
   display: flex;
-  justify-content: space-between;
   height: 60px;
-  padding: 8px 12px;
-  background-color: beige;
-}
-/* 로고 */
-.navbar #logo {
-  line-height: 60px;
-}
-.navbar #logo img{
-  vertical-align: middle;
-}
-/* 브랜드명 */
-.navbar li{
-  display: flex;
-  list-style-type: none;
-  padding-left: 0;
-  font-size: 18px;
-  text-align: center;
-}
-/* 우측상단메뉴 */
-.navbar #menu {
-  float: right;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  
-}
-.navbar #menu li {
-  float:left;
-  margin-left: 50px;
-  line-height: 60px;
+  padding: 8px 0;
+  width: 100%;
 }
 
-.navbar #menu li a {
-  text-decoration: none;
-  color: #545454 ;
-  font-size: 13px;
-  font-weight: bold;
-} 
+.nav-bar-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-comp-name {
+  font-size: 40px;
+  color: var(--color-text-btn);
+}
+
+.nav-bar-menu {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/* 로고 */
+.nav-bar-logo {
+  display: inline-block;
+  height: 100%;
+  width: 60px;
+  margin-left: 2%;
+}
+
+.nav-bar-logo img{
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+/* 브랜드명 */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-bar-comp-name > a{
+  color: white;
+}
+
+/* 우측상단메뉴 */
+.nav-bar-menu :not(:first-child){
+  margin-left: 3%;
+}
 
 /* 배경 */
 .back{
@@ -532,12 +697,16 @@ height: 40px;
 /* footer */
 .footer{
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 80px;
-  background-color: red;
+  margin-top: 20px auto;
 }
 .footer a{
-  margin-left: 10px;
-  margin-right: 10px;
+  margin:0 10px;
   text-decoration: none;
+}
+/*footer 종료*/
+
+/*brand-text 시작*/
+.brand-text{
+  font-size: 100px;
+  text-align: center;
 }
