--- a/src/cart-page.css
+++ b/src/cart-page.css
@@ -1,4 +1,5 @@
 /* 중복 코드 목록 */
+/* 색상 정의 */
 :root {
   --background-color-main-page: rgba(144, 238, 144, 0.66);
   --background-color-footer-icon : violet;
@@ -19,13 +20,221 @@ body * {
   font-family: "Jua", sans-serif;
 }
 
-.nav-bar{
-  display: flex;
-  height: 60px;
-  padding: 8px 0;
-  width: 100%;
-  background-color: red;
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
+
+.main-page {
+  background-color: var(--background-color-main-page);
+  background-image: url(./img/background.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.main-page-text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+}
+
+.main-page-text {
+  font-size: 80px;
+  color: white;
+  margin: 0;
+}
+
+/* text-btn 시작 */
+.text-btn{
+  background-color: var(--background-color-text-btn);
+  color: var(--color-text-btn);
+  padding: 5px 10px;
+  margin: 1% 0;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.text-btn a {
+  text-decoration: none;
+  color: var(--color-text-btn);
+}
+/* text-btn 끝 */
+
+/* main-card 시작 */
+.main-card {
+  width: 310px; 
+  height: 530px;
+  border-radius: 30px;
+  position: relative;
+  display: inline-block;
+  margin: 0 10px;
+}
+
+
+.main-card img {
+  width: 310px;
+  height: 530px;
+}
+
+.main-card:hover {
+  cursor: pointer;
+}
+
+.main-card:hover .main-card-info-box {
+    transform: scale(1);
+}
+
+.main-card .main-card-info-box {
+  position: relative;
+  width: 310px;
+  height: 530px;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  left: 108.3%;
+  top: -101%;
+  transform: scale(0);
+  transition: all .2s ease;
+  z-index: 999;
+}
+
+.main-card-info-head {
+  margin-top: 10px;
+  height: 100px;
+  font-size: 40px;
+  line-height: 40px;
+}
+
+.main-card-info-body {
+  height: 330px;
+  text-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.main-card-info-body * {
+  width: 310px;
+}
+
+.main-card-info-footer {
+  font-size: 25px;
+  height: 100px;
+}
+
+.card-text-btn {
+  text-align: center;
+  width: 310px;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: var(--background-color-main-card);
+}
+/* main-card 끝 */
+
+/* main-card-container 시작 */
+.body-main-page-card {
+  display: inline-block;
+  height: 550px;
+  width: 100%;
+  margin: 10px 0;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.main-card-container {
+  margin: 20px 0;
+}
+
+.main-card-container::-webkit-scrollbar {
+  height: 15px;
+}
+
+.main-card-container::-webkit-scrollbar-thumb {
+  background-color: hsla(216, 100%, 81%, 0.29);
+  border-radius: 7.5px;
+}
+
+.card-container {
+  height: 530px;
+  display: inline-block;
+  padding: 0 40%;
+}
+/* maincard-container 끝 */
+
+/* category-card-container 시작 */
+.category-box-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.category-box {
+  display: inline-block;
+  overflow-inline: hidden;
+  width: auto;
+  padding: 0;
+  margin-left: 6%;
+}
+
+.category-box-item {
+  display: inline-block;
+  background-color: var(--background-color-list-box);
+  list-style-type: none;
+  margin-bottom: 5px;
+  width: 310px;
+  height: 530px;
+  border: 1px solid black;
+}
+
+.category-item-box{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-box-item:hover{
+  border:2px green solid;
+}
+
+.category-box-item > img{
+  object-fit: fill;
+  height: 490px;
+}
+
+.category-box-text{
+  display: flex;
+  height: 40px;
+  background-color: beige;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.category-box-item-sort {
+  border: 1px solid black;
+  border-radius: 20px;
+  display: inline-block;
+  width: 100%;
+  height: 60px;
+  text-align: end;
+}
+
+.category-box-item-sort > a {
+  color: green;
+}
+/* category-card-container 끝 */
+
+/* list-box 시작 */
 .list-box-container {
   width: 100%;
   padding: 0;
@@ -43,20 +252,235 @@ body * {
 .wish-list-table th {
   display: table-cell;
 }
+/* list-box 끝 */
 
-.pay-btn{
-  background-color: #6aafe6;
-  color: #d4dfe6;
+/* caution-box 시작 */
+.caution-box {
+  display: block;
+  background-color: var(--background-color-caution-box);
 }
 
-.pay-btn:hover {
-  background-color: red;
-  color:whitesmoke;
-  letter-spacing: 2px;
-  transform: scale(1.1);
+.caution-list {
+  color: var(--color-caution-text);
+  font-size: 15px;
+}
+/* caution-box 끝 */
+
+/* footer-text-botton 시작 */
+.footer-text-btn-group {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer-text-btn {
+  height: 20px;
+  width: 70px;
+  background-color: var(--color-btn);
+  border-radius: 20px;
+  position: relative;
+  display: inline-block;
+  margin: 10px 20px;
+}
+
+.footer-text-btn:hover {
   cursor: pointer;
 }
 
+.footer-text-btn:hover .footer-text-btn-box {
+    transform: scale(1);
+}
+
+.footer-text-btn .footer-text-btn-box {
+  position: relative;
+  width: 300%;
+  background-color: var(--background-color-footer-text);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  transform: scale(0);
+  transition: all .2s ease;
+  z-index: 999;
+  border-radius: 15px;
+}
+
+.footer-text-btn-info {
+  display: inline-block;
+  width: 100%;
+}
+
+.footer-text-btn-CS {
+  bottom: 103.5px;
+  right: 15%;
+}
+
+.footer-text-btn-SNS {
+  bottom: 72.5px;
+  right: 15%;
+}
+
+.footer-text-btn-AboutUs {
+  bottom: 59.5px;
+  right: 15%;
+}
+
+.footer-text-btn-info > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--color-text-btn);
+}
+
+.footer-text-btn-SNS ul {
+  padding: 0;
+}
+
+.footer-text-btn-SNS li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.footer-text-btn-box img {
+width: 40px;
+height: 40px;
+}
+/* footer-text-botton 끝 */
+
+/* login-popup 시작 */
+.popup-background {
+  background-color: var(--background-color-tree-brown);
+  position: fixed;
+	top: 0;
+	left: 0;
+  width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.3s ease;
+  z-index: 999;
+}
+
+.search-popup-background {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+	background-color: var(--background-color-popup-background);
+	top: 20%;
+	left: 25%;
+  width: 50%;
+	height: 50%;
+  border-radius: 20px;  
+}
+
+.popup {
+    background-color: var(--background-color-tree-brown);
+    border-radius: 1vw;
+    width: 25vw;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: visibility 0s, opacity 0.3s ease;
+}
+
+.popup-close-btn .btn {
+  padding: 0;
+}
+
+.search-popup {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 2%;
+  width: 70%;
+  height: 20%;
+  background-color: var(--background-color-popup-background);
+}
+
+.search-popup .btn {
+  padding: 0;
+  color: white;
+}
+
+.ID-box, .PW-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-popup p, .signin-popup p {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  font-size: 30px;
+}
+
+.auth-box-ID{
+  box-sizing: border-box;
+  width: 100%;
+  height: 60%;
+  border:1px solid #000000;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  text-align: center;
+  min-width: 100px;
+  font-size: 20px;
+}
+
+.login-btn {
+  font-size: 20px;
+}
+
+.find-box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  font-size: 15px;
+}
+
+.find-btn-box {
+  display: flex;
+  align-items: center;
+}
+
+.auto-login-btn-box, .signin-btn-box {
+  font-size: small;
+  position: relative;
+  font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.auto-login-toggle-btn {
+  position: relative;
+  right: 40%;
+  text-align: center;
+  display: inline-block;
+  width: 10%;
+  height: 5%;
+  margin: 0;
+}
+
+.auto-login-btn-box .toggleSwitch {
+  margin: 0;
+}
+/* login-popup 끝 */
+
+/*button 시작*/
+/*전체 버튼에 적용되는 설정*/
 .btn{
   position:relative;
   border:none;
@@ -66,6 +490,226 @@ body * {
   text-decoration: none;
   font-weight: 600;
   transition:0.25s;
+  text-align: center;
+  color: var(--color-btn);
+}
+
+.find-btn .btn, .signin-btn-box .btn {
+  padding: 5px 10px;
+  margin: 1% 0;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn:active{
+  transform:scale(1.3);
+}
+
+.btn:hover{
+  letter-spacing: 2px;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.signin-btn-box > .btn, .signin-popup .btn{
+  background-color: var(--background-color-tree-brown);
+}
+
+/* login, logout, 회원가입 버튼에 적용되는 설정 */
+.auth-btn{
+  background-color: var(--color-btn);
+  color: #000000;
+}
+
+.auth-btn:hover {
+  background-color: var(--color-btn);
+  color: var(--background-color-tree-brown);
+}
+
+.search-btn{
+  align-items: center;
+  height: 100%;
+}
+
+.search-btn > img{
+  display: inline-block;
+  height: 100%;
+  align-items: center;
+}
+
+.toggleSwitch {
+  width: 80px;
+  height: 30px;
+  display: block;
+  position: relative;
+  right: inherit;
+  border-radius: 30px;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 0 3px 3px rgba(0 0 0 / 15%);
+  cursor: pointer;
+  margin: 15px;
+}
+
+.toggleSwitch .toggleButton {
+  width: 30%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background: #000000;
+}
+
+#toggle:checked ~ .toggleSwitch {
+  background: #000000;
+}
+
+#toggle:checked ~ .toggleSwitch .toggleButton {
+  left: calc(100% - 30px);
+  background: #fff;
+}
+
+.toggleSwitch, .toggleButton {
+  transition: all 0.2s ease-in;
+}
+
+.nav-btn{
+  background: #08db40;
+  color:#fff;
+  font-size: 16px;
+}
+
+.search-popup > .btn {
+  position: absolute;
+  right: 2%;
+}
+/*button 종료*/
+
+/*input-box 시작*/
+.auth-box{
+  box-sizing: border-box;
+  width:25%;
+  position: absolute;
+  border:1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  text-align: center;
+  min-width: 100px;
+  font-size: 15px;
+}
+
+.search-box{
+  position: relative;
+  width:100%;
+  height: 100%;
+}
+
+#search-input{
+  height: 100%;
+  box-sizing: border-box;
+  width:100%;
+  min-width:30px;
+  border:1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  text-align: center;
+  font-size: 160%;  
+}
+
+.search-box img{
+  right:12px;
+  position: absolute;
+  height: 80%;
+  top:9px;
+  margin : 0;
+}
+/*input-box 종료*/
+
+/*  */
+.nav-bar{
+  display: flex;
+  height: 60px;
+  padding: 8px 0;
+  width: 100%;
+}
+
+.nav-bar-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-comp-name {
+  font-size: 40px;
+  color: var(--color-text-btn);
+}
+
+.nav-bar-menu {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/* 로고 */
+.nav-bar-logo {
+  display: inline-block;
+  height: 100%;
+  width: 60px;
+  margin-left: 2%;
+}
+
+.nav-bar-logo img{
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+/* 브랜드명 */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-bar-comp-name > a{
+  color: white;
+}
+
+/* 우측상단메뉴 */
+.nav-bar-menu :not(:first-child){
+  margin-left: 3%;
+}
+
+/* 배경 */
+.back{
+  background-image: url("./images/sample_01.jpg");
+  
+  /* background-color: red; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  
+}
+
+/* footer */
+.footer{
+  text-align: center;
+  margin-top: 20px auto;
+}
+.footer a{
+  margin:0 10px;
+  text-decoration: none;
+}
+/*footer 종료*/
+
+/*brand-text 시작*/
+.brand-text{
+  font-size: 100px;
   text-align: center;
 }
 
@@ -93,4 +737,17 @@ body * {
 .pay-cart-btn{
   display: flex;
   justify-content: center;
+}
+
+.pay-btn{
+  background-color: #6aafe6;
+  color: #d4dfe6;
+}
+
+.pay-btn:hover {
+  background-color: red;
+  color:whitesmoke;
+  letter-spacing: 2px;
+  transform: scale(1.1);
+  cursor: pointer;
 }
