--- a/src/mypage.css
+++ b/src/mypage.css
@@ -537,5 +537,151 @@
     width:70vw;
     height: 100vh;
   }
-  
-  
+
+.text {
+    text-decoration: none;
+    text-align: center;    
+}
+
+  /* 우측 카테고리 틀 */
+  .category-content {
+    position: relative;
+    display: block;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: "paybooc-Light", sans-serif;
+    margin-left: 60px;
+    width:60vw;
+    height:67.5vh;
+    border-radius: 15px;
+    color: white;
+    font-size: 30px;
+    transition: 0.25s;
+  }
+
+.category-content:active {
+    transform: scale(1.3);
+}
+.category-content:hover{
+    letter-spacing: 2px;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+/* 우측 카테고리 틀 종료 */
+  /* 카테고리별 각 내용 */
+  #Favorite {
+
+  }
+  #Try {
+
+  }
+  /* 주문내역 */
+  #Order {
+
+  }
+
+/* 주문내역 종료 */
+
+  /* 회원 정보 */
+  #Info {
+
+  }
+
+  .member-info-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 600px;
+    padding: 20px;
+    margin: auto;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+.member-info-box .left-column{
+flex: 1;
+padding: auto;
+text-align: center;
+
+}
+
+
+
+.member-info-box .right-column {
+    flex: 1;
+    padding: 0 10px;
+}
+.member-info-box label {
+    display: block;
+    margin-bottom: 10px;
+}
+.member-info-box input {
+    width: calc(100% - 20px);
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+.member-info-box button {
+    width: calc(100% - 20px);
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+/* 회원 정보 */
+
+  /* 계정 탈퇴 */
+  #Delete {
+
+    padding: 20px;
+    margin: 50px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 30px;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: white;
+  }
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmation-box {
+    background-color : rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.confirmation-box h2 {
+    margin-top: 0;
+}
+.confirmation-box p {
+    margin-bottom: 20px;
+}
+.confirmation-box button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+/* 계정 탈퇴 종료 */
+
+
+
+
+
+
