--- a/src/mypage.css
+++ b/src/mypage.css
@@ -394,7 +394,7 @@
     align-items: center;
   }
   .nav-bar-comp-name > a{
-    color: black;
+    color: white;
   }
   
   /* 우측상단메뉴 */
@@ -577,24 +577,45 @@
 
   }
   /* 주문내역 */
-  #Order {
-
-  }
+  .order-list {
+    margin-bottom: 20px;
+    
+}
+.order-list ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+}
+.order-list ul li {
+    margin-bottom: 5px;
+}
+.delivery-info {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: black;
+}
+.delivery-info h3 {
+    margin-top: 0;
+}
 
 /* 주문내역 종료 */
 
   /* 회원 정보 */
-  #Info {
-
-  }
 
   .member-info-box {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 600px;
+    width: 400px;
     padding: 20px;
-    margin: auto;
+    margin: 50px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
@@ -636,9 +657,10 @@ text-align: center;
 
   /* 계정 탈퇴 */
   #Delete {
-
+    width: 300px;
     padding: 20px;
     margin: 50px;
+    border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     font-size: 30px;
