--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1223,7 +1223,7 @@ height: 40px;
   color: white;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .cart-sum > div{
   display: flex;
